<resources>
    <string name="app_name">Kalkulator</string>
    <string name="_5">5</string>
    <string name="ce">CE</string>
    <string name="_equals">=</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="changeSign">+/-</string>
    <string name="add">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="subtract">-</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="multiply">X</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="divide">/</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="clear">C</string>
    <string name="display">0</string>
    <string name="toastMaxDigits">Maksymalna długośc liczby przekroczona.(15)</string>
</resources>
